--- a/README
+++ b/README
@@ -2,12 +2,7 @@
 
 To run this analysis, you'll need Numpy and Matplotlib.
 
-Run `calc_fractal.py` to generate the data, then run `fig1.py`.
-
-Then change `calc_fractal.py` to be order 5 and 6 polynomials and
-repeat for figures 2 and 3.
-
-Finally, run `fig4.py` to get the bar plot for figure 4.
+  bash bin/run_analysis.sh
 
 Replace `secret_key.dat` with your own secret key to be able to run
 on your cloud account.
