--- a/script/maizeexports.ipynb
+++ b/script/maizeexports.ipynb
@@ -8,7 +8,29 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import os, sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3cce5ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outdir = str(os.environ.get(\"OUTDIR\",'../images/'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a511ef1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.system(\"mkdir \"+outdir)"
    ]
   },
   {
@@ -34,6 +56,7 @@
     "plt.title('Relative maize exports by country')\n",
     "plt.xlabel('Country')\n",
     "plt.ylabel('Relative exports')\n",
+    "plt.savefig(outdir+\"Relative_maize_exports_by_country.pdf\")\n",
     "plt.show()"
    ]
   },
@@ -61,6 +84,7 @@
     "    for area, amount in zip(subsidy_areas, data)\n",
     "])\n",
     "plt.title('US farm subsidy by crop')\n",
+    "plt.savefig(outdir+\"US_farm_subsidy_by_crop.pdf\")\n",
     "plt.show()"
    ]
   },
